# ai_backend

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  codecov.yaml  mkdocs.yml  pyproject.toml  tox.ini
.github/: labels.yml  release-drafter.yml
.github/workflows/: build.yml  draft.yml
docs/reference/: ai_backend.md
scripts/: lint-check.bat  lint.bat
src/ai_backend/: __init__.py  ai_backend  api.py  backend_manager.py
src/base/: ai_base.py  ai_interface_base.py
src/openai/: __init__.py  openai_audio_backend.py  openai_image_backend.py  openai_text_backend.py
src/openai_backend/: openai_audio_backend.py  openai_image_backend.py  openai_text_backend.py
tests/: conftest.py  test_ConfigManager.py  test_add.py  test_backend_manager.py  test_config_manager.py  test_live_api.py  test_live_openai_image_backend.py  test_live_openai_text_backend.py  test_mock_openai_text_backend.py
