[project]
name = "ai-backend"
authors = [
  { name = "ai-backend", email = "jason@na.com" }
]
description = "A simple interface to easily swap between AI providers and models when building prototypes"
readme = "README.md"
dynamic = ["version"]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
]
requires-python = ">=3.9"
dependencies = [
]

[project.urls]
Documentation = "https://jcmullwh.github.io/ai-backend/"
Source = "https://github.com/ai-backend"


[tool.mypy]
files = ["ai_backend"]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true


[tool.ruff]
target-version = "py39"
line-length = 120
[tool.ruff.lint]
extend-select = ["I"]
select = [
    "A",
    "ARG",
    "B",
    "C",
    "DTZ",
    "E",
    "EM",
    "F",
    "FBT",
    "ICN",
    "ISC",
    "N",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "Q",
    "RUF",
    "S",
    "T",
    "TID",
    "UP",
    "W",
    "YTT",
]
ignore = [
    # Allow non-abstract empty methods in abstract base classes
    "B027",
    # Allow boolean positional values in function calls, like `dict.get(... True)`
    "FBT003",
    # Ignore checks for possible passwords
    "S105",
    "S106",
    "S107",
    # Ignore complexity
    "C901",
    "PLR0911",
    "PLR0912",
    "PLR0913",
    "PLR0915",
]

[tool.pytest.ini_options]
addopts = "--cov=ai_backend/ --cov-report=term-missing"
asyncio_mode = "strict"


[tool.pdm.dev-dependencies]
test = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "pytest-asyncio",
  ]
dev = [
"deptry>=0.16.1",
"mypy>=1.10.0",
  "ruff>=0.4.3",
  "pre-commit>=3.7.0",
  "tox>=4.15.0"
]
docs = [
  "mkdocs>=1.6.0",
  "mkdocs-material>=9.5.21",
  "mkdocstrings[python]>=0.25.1"
]


[tool.pdm.scripts]
test = "pytest"
test-cov-xml = "pytest --cov-report=xml"
lint = "scripts/lint.bat" # or "lint.bat" for Windows
lint-check = "scripts/lint-check.bat" # or "lint-check.bat" for Windows
docs-serve = "mkdocs serve"
docs-build = "mkdocs build"

[tool.pdm.build]
# excludes = ["./**/.git"]
# package-dir = "."
includes = ["ai_backend"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"